# mitogenome-batch-processor

./: .gitignore  README.md  pyproject.toml
.snakemake/metadata/: dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi90cmltbWluZy9zYW1wbGVfMDAxX1IxLnRyaW1tZWQuZmFzdHEuZ3o=  dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi90cmltbWluZy9zYW1wbGVfMDAxX1IyLnRyaW1tZWQuZmFzdHEuZ3o=  dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi9hbm5vdGF0aW9uL3NhbXBsZV8wMDEuZ2Zm  dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi9hc3NlbWJseS9zYW1wbGVfMDAxLmZhc3Rh  dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi9waHlsb2dlbnkvc2FtcGxlXzAwMS5ud2s=  dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi9xYy9zYW1wbGVfMDAxLnFjLmRvbmU=  dGVzdHMvZml4dHVyZXMvb3V0cHV0cy90ZXN0X2pvYi9yZXBvcnRpbmcvc2FtcGxlXzAwMS5yZXBvcnQubWQ=
archival/: sra_metadata.py  table2asn_validation.py
ctrl/: Snakefile
ctrl/config/: config.yaml  home_testing_config.yaml  i_hate_my_computer.yaml  mitopipeline_production_manifest.tsv  prod_config.yaml
ctrl/rules/: alignment_dataset.smk  annotation.smk  archival_validation.smk  assembly.smk  assembly_rescue.smk  biosample_archival.smk  blast.smk  blast_config.smk  blast_hits.smk  contig_selection.smk  getorganelle_config.smk  mitogenome_archival.smk  mitos2_config.smk  phylogeny.smk  qc.raw.smk  qc.smk  qc.trimmed.smk  report_pdf.smk  (+5 more)
docs/: adr.md  tool_workdir_policy.md
envs/: annotation.yaml  assembly.yaml  blast.yaml  mega12.yaml  mitopipeline.yaml  pdf_export.yaml  phylogeny.yaml  qc.yaml  reporting.yaml  rescue.yaml  table2asn.yaml  trimming.yaml  visualization.yaml
legacy/: fastp.sh  getorganelle.sh
(+205 files in other folders)
